# notes-search

./: README.md  pyproject.toml
notes_search/: cli.py  config.py  container.py  db.py  logger.py
notes_search/adapters/: ollama_embedder.py  ollama_synthesizer.py  ollama_tagger.py  sqlite_repository.py  word_chunker.py
notes_search/commands/: ingest_command.py
notes_search/core/: models.py
notes_search/core/services/: ingest_service.py  search_service.py  show_note_service.py
notes_search/ports/: chunker.py  embedder.py  note_repository.py  synthesizer.py  tagger.py
notes_search/utils/: chunker.py  embedder.py  llm_functions.py
scripts/: check_arch.py  debug_note.py  debug_notes.py  debug_tags.py  debug_vectors.py  reset_notes.py
tests/: test_chunker.py  test_embedder.py  test_ingest_command.py  test_ingest_service.py  test_llm_functions.py  test_search_service.py  test_synthesizer.py
