[project]
name = "notes-search"
version = "0.1.0"
description = "Local, offline-capable CLI for ingesting, searching, and generating personal notes using locally hosted AI models — no data leaves your machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "sqlite-vec>=0.1",
    "tomli-w>=1.0",
]

[project.scripts]
notes = "notes_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
